--- a/nimbus-ui/nimbusui/src/app/components/platform/header/header-global.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/header/header-global.component.html
@@ -1,13 +1,13 @@
 <div class="header" *ngIf="topMenuItems || branding">
     <a [routerLink]="[homeRoute]">
-        <img src="{{imagesPath}}{{branding.logo.config.uiStyles.attributes.imgSrc}}" class=" logo" alt="{{this.label}}" />
+        <img src="{{imagesPath}}{{branding?.logo?.config?.uiStyles?.attributes?.imgSrc}}" class=" logo" alt="{{this.label}}" />
     </a>
     <div class="d-inline-block p-0 pull-right clearfix">
         <div class="headerMenu pull-right clearfix">
             <div class="topLinksMenu">
                 <a class="sr-only" aria-hidden="true" href="">Skip Navigation</a>
-                <nm-link [element]="branding.help" *ngIf="branding.help"></nm-link>
-                <nm-link [element]="branding.logOut" *ngIf="branding.logOut"></nm-link> 
+                <nm-link [element]="branding?.help" *ngIf="branding?.help"></nm-link>
+                <nm-link [element]="branding?.logOut" *ngIf="branding?.logOut"></nm-link> 
 
             </div>
             <div class="btn-group pull-right clearfix">
@@ -26,10 +26,10 @@
             <i class="fa fa-user userIcon"></i>
             <div class="userInfo">
                 <div class="userName">
-                    <nm-value [element]="branding.userName" *ngIf="branding.userName"></nm-value>  
+                    <nm-value [element]="branding?.userName" *ngIf="branding?.userName"></nm-value>  
                 </div>
                 <div class="userRole">
-                    <nm-value [element]="branding.userRole" *ngIf="branding.userRole"></nm-value>  
+                    <nm-value [element]="branding?.userRole" *ngIf="branding?.userRole"></nm-value>  
                 </div>
             </div>
         </div>
@@ -38,9 +38,9 @@
 
     <div class="col-lg-6 col-md-3 col-sm-3 hidden-xs-down p-0 ml-3 mt-1 ">
         <div class="productName hidden-xs-down d-inline-block">
-            <nm-paragraph [element]="branding.appTitle" *ngIf="branding.appTitle"></nm-paragraph>
-            <div class="subTitle" *ngIf="branding.subTitle">
-                <nm-paragraph [element]="branding.subTitle"></nm-paragraph> 
+            <nm-paragraph [element]="branding?.appTitle" *ngIf="branding?.appTitle"></nm-paragraph>
+            <div class="subTitle" *ngIf="branding?.subTitle">
+                <nm-paragraph [element]="branding?.subTitle"></nm-paragraph> 
             </div>
         </div>
             
