--- a/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-grid.component.html
@@ -3,7 +3,7 @@
         <!-- loop thru card grid -->
         <ng-template ngFor let-element [ngForOf]="card?.type?.model?.params">
             <!-- loop thru collection elements -->
-            <ng-template [ngIf]="element.config?.uiStyles?.attributes?.alias == 'CardDetail'">
+            <ng-template [ngIf]="element.config?.uiStyles?.attributes?.alias == componentTypes.cardDetail.toString()">
                 <nm-card-details [element]="element" [collectionElem]="card.collectionElem" [elemId]="card.elemId" ></nm-card-details>
             </ng-template>
         </ng-template>
