--- a/nimbus-ui/nimbusui/src/app/components/platform/tile.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/tile.component.html
@@ -2,9 +2,10 @@
 <div class="card-holder" id="{{code}}" [ngClass]="styleWd" *ngIf="visible==true">
 		<div class="card-header">
 			<!--check for title label to render the header-->
-			<h2 class="card-title {{imgSrc}}" *ngIf="element?.config?.labelConfigs?.length > 0 && label != '' ">
+			<!-- <h2 class="card-title {{imgSrc}}" *ngIf="element?.config?.labelConfigs?.length > 0 && label != '' ">
 				{{label}} 
-			</h2>
+			</h2> -->
+			<nm-label *ngIf="element?.config?.labelConfigs?.length > 0 && label != '' " [size]="labelSize" [label]="label" [labelClass]="imgSrc + ' card-title'" ></nm-label>
 			<ng-template ngFor let-element [ngForOf]="nestedParams">
 				<!-- ButtonGroup -->
 				<ng-template [ngIf]="element.alias == componentTypes.buttonGroup.toString()">
@@ -26,7 +27,7 @@
 					<nm-tile [element]="element" tileType="subtile"></nm-tile>
 				</ng-template>
 				<ng-template [ngIf]="element.alias == viewComponent.section.toString()">
-					<nm-section [element]="element"></nm-section>	
+					<nm-section [element]="element" [position]="position+1"></nm-section>	
 				</ng-template>
 				<ng-template [ngIf]="element.alias == viewComponent.modal.toString()">
 					<nm-modal [element]="element"></nm-modal>	
