NIM-16134 - Adding InputLabel and Refactoring Label a bit
Added <nm-input-label> to provide label support for input elements

Refactored label logic in BaseElement and BaseControl to use underlying LabelConfig

Adding style() attribute to @Label component to use new @Style annotation.

--- a/nimbus-ui/nimbusui/src/app/components/platform/content/page-content.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/content/page-content.component.html
@@ -8,7 +8,12 @@
         <!-- <h1 class="page-title {{imgSrc}} ">
             {{label}}
         </h1> -->
-        <nm-label [labelClass]="imgSrc + ' page-title'" [size]="labelSize" [label]="label"></nm-label>
+        <nm-label *ngIf="labelConfig?.text"
+            [labelConfig]="labelConfig"
+            [labelClass]="imgSrc + ' page-title'" 
+            [size]="labelSize">
+        
+        </nm-label>
     </ng-template>
 
     <nm-tile [element]="tile" *ngFor="let tile of tilesList" [position]="position+1"></nm-tile>
