null safety checks and spelling

--- a/nimbus-ui/nimbusui/src/app/components/platform/card/card-details.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/card/card-details.component.html
@@ -1,5 +1,5 @@
 <div class="mt-1 cardBody {{element.config?.uiStyles?.attributes?.cssClass}}">
-    <nm-label *ngIf="labelConfig && labelConfig?.text != ''" 
+    <nm-label *ngIf="labelConfig?.text != ''" 
         [labelConfig]="labelConfig"
         [size]="labelSize">
 
