--- a/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
@@ -66,7 +66,11 @@ h3{
     font-size: 1.14rem;
     line-height: 1.75rem;
     font-weight: bold;
-
+}
+h4, h5, h6{
+    font-size: 1rem;
+    line-height: 1.25rem;
+    font-weight: bold;
 }
 // .col-xs-12.smallCardCenter {
 //     text-align: right;
