--- a/nimbus-ui/nimbusui/src/app/components/platform/tile.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/tile.component.html
@@ -5,12 +5,7 @@
 			<!-- <h2 class="card-title {{imgSrc}}" *ngIf="element?.config?.labelConfigs?.length > 0 && label != '' ">
 				{{label}} 
 			</h2> -->
-			<nm-label *ngIf="labelConfig?.text != ''" 
-			[labelConfig]="labelConfig" 
-				[size]="labelSize" 
-				[labelClass]="imgSrc + ' card-title'">
-			
-			</nm-label>
+			<nm-label *ngIf="labelConfig?.text != ''" [labelConfig]="labelConfig" [size]="labelSize" [labelClass]="imgSrc + ' card-title'"></nm-label>
 			<ng-template ngFor let-element [ngForOf]="nestedParams">
 				<!-- ButtonGroup -->
 				<ng-template [ngIf]="element.alias == componentTypes.buttonGroup.toString()">
