--- a/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
@@ -2,7 +2,7 @@
     <nm-label *ngIf="labelConfig?.text" [labelConfig]="labelConfig" [size]="labelSize"></nm-label>
     <!--condition for rendering accordion groups inside form-->
     <ng-template [ngIf]="groups.length>0">
-        <nm-accordion [element]="group" [elementCss]="elementCss" [form]="form" *ngFor="let group of groups">
+        <nm-accordion [element]="group" [elementCss]="elementCss" [form]="form" [position]="position + 1" *ngFor="let group of groups">
         </nm-accordion>
     </ng-template>
 
