--- a/nimbus-ui/nimbusui/src/app/components/platform/footer/footer-global.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/footer/footer-global.component.html
@@ -2,8 +2,8 @@
   
     <div class="footer-text">
         <div class="displayNone">
-            <div id="testSvg" class="icon red"><nm-svg name='add1'></nm-svg></div>   
-            <button  type="button" class="btn btn-icon"><nm-svg name='add1'></nm-svg></button>
+            <!-- <div id="testSvg" class="icon red"><nm-svg name='add1'></nm-svg></div>   
+            <button  type="button" class="btn btn-icon"><nm-svg name='add1'></nm-svg></button> -->
         </div>
         <ng-template *ngIf="footerConfig?.disclaimer">
             <nm-paragraph [element]="footerConfig.disclaimer"></nm-paragraph>
