updated growl to toast

--- a/nimbus-ui/nimbusui/src/app/components/platform/content/page-content.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/content/page-content.component.html
@@ -1,7 +1,7 @@
 <!-- Display Tiles -->
 <nm-message messageContext="{{element?.message.context}}" [messageArray]="element?.message.messageArray" [life]="element?.message.life"  *ngIf="element?.message"></nm-message>
 
-<nm-message messageContext = "GROWL" [messageArray]="errMsgArray" [life]=10000 *ngIf="errMsgArray.length > 0"></nm-message>
+<nm-message messageContext = "TOAST" [messageArray]="errMsgArray" *ngIf="errMsgArray.length > 0"></nm-message>
 
 <ng-template [ngIf]="element?.visible">
     <ng-template [ngIf]="element?.config?.labelConfigs?.length > 0">
