--- a/nimbus-ui/nimbusui/src/app/components/platform/form-element.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/form-element.component.html
@@ -22,6 +22,14 @@
             [position]="position">
         </nm-table>
     </ng-template>
+
+    <ng-template [ngIf]="element.config?.uiStyles?.attributes?.alias == 'TreeGrid'">
+            <nm-treegrid
+                [element]="element" [form]="form" [formControlName]="element.config?.code"
+                [params]="element?.config?.type?.elementConfig?.type?.model?.paramConfigs"
+                >
+            </nm-treegrid>
+    </ng-template>
     <ng-template ngFor let-msg [ngForOf]="getMessages()">
         <nm-message [messageContext]="msg.context"  [messageArray]="msg.messageArray" [life] = "msg.life" [styleClass]="msg.styleClass"></nm-message>
     </ng-template>
