--- a/nimbus-ui/nimbusui/src/app/components/platform/tree-grid/tree-grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/tree-grid/tree-grid.component.html
@@ -1,10 +1,5 @@
-<div style="text-align:center">
-    <h1>
-        Welcome to Tree grid!
-    </h1>
-</div>
 
-<p-treeTable [value]="files">
+<p-treeTable [value]="treeData" [paginator]="true" [rows]="10">
     <ng-template pTemplate="header">
         <tr>
             <th></th>
@@ -20,7 +15,7 @@
             </td>
             <ng-template ngFor let-col let-colIndex="index" [ngForOf]="params">
                 <td *ngIf="showColumn(col)">{{getCellDisplayValue(rowData, col)}}</td>
-            </ng-template>
+            </ng-template>   
 
         </tr>
     </ng-template>
